--- a/styling.css
+++ b/styling.css
@@ -1,60 +1,196 @@
+:root {
+	--carousel-height: 100vh;
+	--carousel-nav-color: black;
+	--carousel-nav-margin: 1em;
+
+	--slide-padding: 2em;
+
+	--dots-color: black;
+
+	--heading-font-size: 3em;
+}
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+}
+
 @import url('https://fonts.googleapis.com/css?family=Gaegu');
-	body{
-		margin: 0;
+body{
+	margin: 0;
+}
 
-	}
-	#top{
-		width:100%;
-		height:100vh;
-		background-color:#DC143C;
+.fullscreen {
+	width: 100%;
+	height: 100vh;
+}
 
-	}
-	#bottom{
-		width:100%;
-		height:100vh;
-		background-color:#F5FFFA;
-	}
+#top{
+	background-color:#DC143C;
+}
+
+#top h1{
+	font-size: var(--heading-font-size);
+	font-family: 'Gaegu', cursive;
+	font-weight: 500;
+	position: center;
+	top: 35%;
+	color: white;
+	margin:0 auto;
+	margin-left:-10%;
+}
+
+#top h2{
+	top: 50%;
+	margin: auto;
+	position: relative;
+	font-family: 'Gaegu', cursive;
+	font-weight: 100;
+}
+
+@media screen and (min-height: 974px)
+{
 	#top h1{
-		font-size: 7em;
-		font-family: 'Gaegu', cursive;
-		font-weight: 500;
-		position:center;
-		top:35%;
-		color:white;
-		margin:0 auto;
-		margin-left:-10%;
+		left: 10%;
 	}
 	#top h2{
-		top:50%;
-		margin:auto;
-		position: relative;
-		font-family: 'Gaegu', cursive;
-		font-weight: 100;
+		font-size: 3em;
 	}
-	@media screen and (max-height: 974px)
-	{
-		#top h1{
-			left:10%;
-		}
-		#top h2{
-			font-size: 3em;
-		}
-	} 
-	#bottom h1{
-		font-size:6em;
-		font-family:'Gaegu',cursive;
-		font-weight: 400;
+}
+
+#bottom h1{
+	font-size: 6em;
+	font-family: 'Gaegu',cursive;
+	font-weight: 400;
+}
+
+@media screen and (min-height:839px){
+	#top h1{
+		left:0%;
 	}
-	@media screen and (max-height:839px){
-		#top h1{
-			left:0%;
-		}
+}
+
+@media screen and (min-height: 643px){
+	#top h1{
+		left:0%;
+		top:30%;
+		margin-left: -10%;
+		font-size: 7em;
 	}
-	@media screen and (max-height: 643px){
-		#top h1{
-			left:0%;
-			top:30%;
-			margin-left: -10%;
-			font-size: 7em;
-		}
-	}
+}
+
+.slide h1 {
+	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: red;
+	font-size: 48px;
+	line-height: 54px;
+	text-align: center;
+	font-family: 'TrebuchetMS', trebuchet, sans-serif;
+}
+
+.page {
+	height: 100vh;
+	width: 100%;
+	background-color: teal;
+}
+
+.carousel {
+	height: var(--carousel-height);
+	width: 100%;
+	position: relative;
+}
+
+.carousel-view {
+	height: var(--carousel-height);
+	width: 100%;
+	overflow: hidden;
+}
+
+.carousel-view ul {
+	left: 0;
+	width: 100%;
+	height: inherit;
+	overflow: hidden;
+	position: relative;
+}
+
+.slide {
+	width: 100%;
+	height: var(--carousel-height);
+	margin: 0 auto;
+	max-width: 960px;
+	position: relative;
+	padding: var(--slide-padding);
+}
+
+.carousel-view ul.animate {
+	transition: 0.3s all;
+}
+
+.carousel .carousel-view ul li {
+	float: left;
+	width: 100%;
+	height: inherit;
+}
+
+
+.carousel-dots ul {
+	bottom: 4px;
+	width: 100%;
+	text-align: center;
+	position: absolute;
+}
+
+.carousel-dots ul li {
+	width: 10px;
+	height: 10px;
+	margin: 0 4px;
+	border-radius: 50%;
+	transition: 0.3s all;
+	display: inline-block;
+	border: 1px solid var(--dots-color);
+}
+
+.carousel-dots ul li.active {
+	border: 5px solid var(--dots-color);
+}
+
+.carousel-pagination ul li:first-child {
+	margin-left: 0;
+}
+
+.carousel-pagination ul li:last-child {
+	margin-right: 0;
+}
+
+.carousel-previous,
+.carousel-next {
+	color: var(--carousel-nav-color);
+	top: 50%;
+	width: 40px;
+	height: 40px;
+	cursor: pointer;
+	border-radius: 50%;
+	position: absolute;
+	transform: translateY(-50%);
+}
+
+.carousel-previous {
+	left: var(--carousel-nav-margin);
+}
+
+.carousel-next {
+	right: var(--carousel-nav-margin);
+	text-align: right;
+}
+
+.card {
+	position: relative;
+	background-color: blue;
+	width: 100%;
+}
