--- a/styling.css
+++ b/styling.css
@@ -7,12 +7,12 @@
 
 	--slide-padding: 2rem;
 
-	--card-padding: 3ch;
+	--card-padding: 2ch;
 	--card-border-radius: 1em;
 	--card-title-color: white;
 	--card-p-color: white;
-	--card-p-font-size: 3vw;
-	--card-gradient: linear-gradient(transparent 20%, black 40%);
+	--card-p-font-size: 1em;
+	--card-gradient: linear-gradient(transparent, black);
 	--card-p-top: 50vh;
 
 	--image-1: url("images/AU.jpg");
@@ -54,21 +54,14 @@
 }
 
 #top h2{
-	top: 50%;
+	top: 25%;
 	margin: auto;
 	position: relative;
 	font-family: 'Gaegu', cursive;
 	font-weight: 100;
 }
 
-@media screen and (min-width: 974px) {	
-	#top h1 {
-		left: 10%;
-	}
-	#top h2 {
-		font-size: 3em;
-	}
-}
+
 
 #bottom h1 {
 	font-size: 6em;
@@ -76,24 +69,7 @@
 	font-weight: 400;
 }
 
-@media screen and (min-width:839px) {
-	#top h1 {
-		left:0%;
-	}
-}
 
-@media screen and (min-width: 643px) {
-	:root {
-		--card-p-font-size: 1em;
-	}
-
-	#top h1 {
-		left: 0%;
-		top: 30%;
-		margin-left: -10%;
-		font-size: 7em;
-	}
-}
 
 /* Carousel */
 
@@ -161,21 +137,32 @@
 }
 
 .card p {
-	font-size: var(--card-p-font-size);
-	margin-top: var(--card-p-top);
+	font-size: 1rem;
+	position: absolute;
+	bottom: 10%;
+	text-align: justify;
+	padding-right: 1ch;
+}
+
+.card h3{
+	font-size: 2rem;
+	position: absolute; 
+	bottom: 80%;
+	text-align: center;
+	margin-left: 1em; 
 }
 
 #card-1 {
 	background: var(--card-gradient), var(--image-1);
 	background-size: cover;
-	background-position: 60% bottom;
+	background-position: center;
 	background-repeat: no-repeat;
 }
 
 #card-2 {
 	background: var(--card-gradient), var(--image-2);
 	background-size: cover;
-	background-position: 50% center;
+	background-position: center 20%;
 	background-repeat: no-repeat;
 }
 
@@ -189,7 +176,7 @@
 #card-4 {
 	background: var(--card-gradient), var(--image-4);
 	background-size: cover;
-	background-position: 70% bottom;
+	background-position: center;
 	background-repeat: no-repeat;
 }
 
@@ -248,4 +235,68 @@
 	font-size: 2em;
 	right: var(--carousel-nav-margin);
 	text-align: right;
+}
+
+@media screen and (max-width: 360px){
+	.card p{
+		font-size: 0.75em;
+	}
+	.card h3{
+		bottom: 50%;
+	}
+}
+
+@media screen and (min-width: 643px) {
+	:root {
+		--card-p-font-size: 1em;
+	}
+
+	#top h1 {
+		left: 0%;
+		top: 30%;
+		margin-left: -10%;
+		font-size: 7em;
+	}
+	.card h3{
+		bottom: 40%;
+		font-size: 2em;
+	}
+	.card p{
+		font-size: 1em;
+	}
+}
+
+@media screen and (min-width:839px) {
+	:root {
+		--card-p-font-size: 1rem;
+	}
+	#top h1 {
+		left:0%;
+	}
+	.card h3{
+		bottom: 40%;
+		font-size: 2rem;
+	}
+	.card p{
+		font-size: 1em;
+	}
+}
+
+@media screen and (min-width: 974px) {
+	:root {
+		--card-p-font-size: 1rem;
+	}
+	#top h1 {
+		left: 10%;
+	}
+	#top h2 {
+		font-size: 3em;
+	}
+	.card p{
+		font-size: 1em;
+	}
+	.card h3{
+		font-size: 3em;
+		bottom: 35%;
+	}
 }
